<resources>
    <string name="app_name">WakeUp</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="title_tab_one">Home</string>
    <string name="title_tab_two">Alarm</string>
    <string name="title_tab_three">Group</string>
    <string name="title_tab_four">History</string>
    <string name="add_alarm">Add alarm</string>
    <string name="select_time">Select Time</string>
    <string name="display_alarm_time">06:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_alarm_name">Alarm</string>
    <string name="alarm_name_label">Alarm Name</string>
    <string name="awake_status_label">Awake Status</string>
    <string name="arrow_description">arrow</string>
    <string name="game_option_label">Game Option:</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="new_profile_name">New Profile Name</string>
    <string name="alarm_category">Alarm Category</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="show_leader_board">Show leader board</string>


    <!-- HistoryActivity -->
    <string name="history_title">How long did it take to wake you up?</string>

    <string name="new_group_text">New Group</string>
    <string name="friends_list">Friends List</string>
    <string name="title_activity_single_group">SingleGroupActivity</string>
    <string name="settings">Settings</string>
    <string name="ok_uppercase">OK</string>
    <string name="admin">Admin</string>
    <string name="delete_group">DELETE GROUP</string>
    <string name="alarm">Alarm</string>
    <string name="_06_00">06:00</string>
    <string name="group_settings">Group Settings</string>
    <string name="title_activity_create_edit_alarm">CreateEditAlarm</string>
    <string name="history2">History</string>
    <string name="delay">Delay</string>
    <!-- Leaderboard -->
    <string name="player">Player</string>
    <string name="high_score">High Score</string>


    <!-- Login -->
    <string name="register"><u>Register here</u></string>
    <string name="forgot_password">Forgot your password? Click <u>here</u></string>
    <string name="reset">We just need your registered email address \nto send your password reset</string>
    <string name="no_account"><u>Doesn\'t have an account?</u></string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="account_disabled">Account is disabled by the administrator</string>
    <string name="unknown_error">An unknown error occurred</string>

    <!--Dialog-->
    <string name="change_alarm_name_dialog">Change Alarm Name Dialog</string>
    <string name="refresh">refresh</string>

</resources>
